<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/background"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:textSize="22dp"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:textColor="@color/colorWhite"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:textColor="@color/colorWhite"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:textColor="@color/colorWhite"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle3" />


</LinearLayout>
